--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <title>Work term report</title>
+</head>
+
+<nav>
+    <a class="nav-link" href="/">Home</a>
+        <ul class="nav-list">
+            <li class="nav-list-item">
+                <a class="nav-link" href="/images">Explore Images</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="nav-link" href="/images/new">Add an Image</a>
+            </li>
+        </ul>
+</nav>
+
 <h1>Test temp</h1>
 
 <p>This is a test for hosting</p>
