--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
     <title>Work term report</title>
 </head>
 
-<nav>
-    <a class="nav-link" href="/">Home</a>
+<body>
+    <nav>
+        <a class="nav-link" href="index.html">Home</a>
         <ul class="nav-list">
             <li class="nav-list-item">
-                <a class="nav-link" href="/images">Explore Images</a>
+                <a class="nav-link" href="WorkTerm1.html">Work Term 1</a>
             </li>
             <li class="nav-list-item">
                 <a class="nav-link" href="/images/new">Add an Image</a>
             </li>
         </ul>
-</nav>
+    </nav>
 
-<h1>Test temp</h1>
+    <h1>Welcome to work term thingie!</h1>
 
-<p>This is a test for hosting</p>
+    <p>This site is to host several different work term reports, detailing what I have done and things I've learned during my different co-op jobs</p>
 
-<p>Another test</p>
+    <p>Use the nav-bar to check out each report per work term!</p>
+
+    <h2>About Me</h2>
+</body>
