--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
 
 <body>
     <nav>
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link-home" href="index.html">Home</a>
         <ul class="nav-list">
             <li class="nav-list-item">
-                <a class="nav-link" href="WorkTerm1.html">Work Term 1</a>
-            </li>
-            <li class="nav-list-item">
-                <a class="nav-link" href="/images/new">Add an Image</a>
+                <a class="nav-link-home" href="WorkTerm1.html">Work Term 1</a>
             </li>
         </ul>
     </nav>
 
-    <h1>Welcome to work term thingie!</h1>
-
-    <p>This site is to host several different work term reports, detailing what I have done and things I've learned during my different co-op jobs</p>
-
-    <p>Use the nav-bar to check out each report per work term!</p>
-
-    <h2>About Me</h2>
+    <div class="container top-spacing">
+        <h1>Welcome to Justin's Work Term Repository</h1>
+        <div class="content">
+            <p>This site is to host several different work term reports, detailing what I have done and things I've learned throughout my different co-op jobs as a student at the University of Guelph!</p>
+            <p>Use the nav-bar to check out each report per work term!</p>
+        </div>
+    </div>
 </body>
