--- a/WorkTerm1.html
+++ b/WorkTerm1.html
@@ -12,26 +12,19 @@
     <title>Work term report</title>
 </head>
 
-<body>
+<body class="work-term-background-gradiant">
     <nav>
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link-WT1" href="index.html">Home</a>
         <ul class="nav-list">
             <li class="nav-list-item">
-                <a class="nav-link" href="WorkTerm1.html">Work Term 1</a>
-            </li>
-            <li class="nav-list-item">
-                <a class="nav-link" href="/images/new">Add an Image</a>
+                <a class="nav-link-WT1" href="WorkTerm1.html">Work Term 1</a>
             </li>
         </ul>
     </nav>
 
-    <h1>Work Term Report #1</h1>
+    <h1 class="huge-text"><u>Work Term Report #1</u></h1>
 
-    <!-- <div>
-        <h2>Introduction</h2>
-        <p>For my first co-op work term, I was hired at a company called Kritik</p>
-    </div> -->
-    <div>
+    <div class="container">
         <div>
             <h2>About the employer</h2>
             <p>For my first co-op work term, I was hired to work at a start-up, ed-tech company called Kritik, founded in 2019. 
@@ -72,14 +65,18 @@
             <h2>Conclusion</h2>
             <p>Overall, I am happy with the co-op position I had for the summer. 
                 I was able to work and learn in a work environment, learn more about several different developer tools and got to work with an amazing team that had my back and was willing to support me.
+                I believe that the work I did at this co-op placement helped enhance my knowledge of Computer Science I have so far learned from academic experience.
             </p>
         </div>
         <div>
-            <!-- Add something about how it added to your education or smthing -->
-            <h2>Acknoledgements</h2>
-            <p>
-                WIP
+            <h2>Acknowledgments</h2>
+            <p class="center">
+                For acknowledgments, I'd like to highlight the developers that helped me throughout this work term to be the best dev I could be:
             </p>
+            <ul class="text-list">
+                <li>Chun: </li>
+            </ul>
+            
         </div>
     </div>
 </body>
