--- a/WorkTerm1.html
+++ b/WorkTerm1.html
@@ -93,6 +93,7 @@
             <p>Overall, I am happy with the co-op position I had for the summer. 
                 I was able to work and learn in a work environment, learn more about several different developer tools and got to work with an amazing team that had my back and was willing to support me.
                 I believe that the work I did at this co-op placement helped enhance my knowledge of Computer Science I have so far learned from academic experience.
+                There were several new tools I got to use such as AWS for deployments, Vitest for running the application locally, Cypress for testing and Postgresql for general database knowledge.
             </p>
         </div>
         <div>
