--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <a class="nav-link-home" href="index.html">Home</a>
         <ul class="nav-list">
             <li class="nav-list-item">
-                <a class="nav-link-home" href="WorkTerm1.html">Work Term 1</a>
+                <a class="nav-link-home" href="WorkTerm1.html">Work Term 1 (Kritik)</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="nav-link-home" href="WorkTerm2.html">Work Term 2 (Kritik)</a>
             </li>
         </ul>
     </nav>
