--- a/WorkTerm1.html
+++ b/WorkTerm1.html
@@ -22,6 +22,12 @@
             <li class="nav-list-item">
                 <a class="nav-link-WT1" href="WorkTerm2.html">Work Term 2 (Kritik)</a>
             </li>
+            <li class="nav-list-item">
+                <a class="nav-link-WT1" href="WorkTerm3.html">Work Term 3 (MANTECH)</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="nav-link-WT1" href="WorkTerm4.html">Work Term 4 (MANTECH)</a>
+            </li>
         </ul>
     </nav>
 
