--- a/WorkTerm2.html
+++ b/WorkTerm2.html
@@ -22,6 +22,12 @@
             <li class="nav-list-item">
                 <a class="nav-link-WT2" href="WorkTerm2.html">Work Term 2 (Kritik)</a>
             </li>
+            <li class="nav-list-item">
+                <a class="nav-link-WT2" href="WorkTerm3.html">Work Term 3 (MANTECH)</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="nav-link-WT2" href="WorkTerm4.html">Work Term 4 (MANTECH)</a>
+            </li>
         </ul>
     </nav>
 
@@ -100,7 +106,6 @@
                 Though through strong teamwork, we were able to meet this deadline just in time and secure the sale.
             </p>
             <div class="">
-                <!-- Update this to be acrtually formatted and not bad.  -->
                 <img src="Images/kritikHolidays.jpg" alt="Kritik Chirstmas photo" class="centered-image">            
             </div> 
         </div>
